<resources>
    <string name="app_name">ManageProducts</string>
    <string name="txtLoginUser">User:</string>
    <string name="txtLoginPassword">Password:</string>
    <string name="chbLoginRemember">Remember</string>
    <string name="btnLogin">Login</string>
    <string name="btnLoginCancel">Cancel</string>
    <string name="hintUser">Introduce an user</string>
    <string name="hintPass">Introduce a password</string>
    <string name="savedUser">Saved</string>
    <string name="contentdescription">contentDescription</string>
    <string name="text_in_name_product">Introduce a name</string>
    <string name="text_in_brand_product">Introduce a brand</string>
    <string name="text_in_descrription_product">Introduce a description</string>
    <string name="text_in_dosage_product">Introduce a dosage</string>
    <string name="text_in_sale_product">Introduce a sale</string>
    <string name="text_in_stock_product">Stock</string>
    <string name="text_in_description_product">Description</string>
    <string name="action_add_product">Añadir</string>
    <string name="action_sortbyname_product">Ordenar por nombre</string>
    <string name="action_generals_settings">Preferencias Generales</string>
    <string name="action_users_settings">Opciones de usuario</string>
    <string name="text_name">Nombre</string>
    <string name="text_paswd">Contraseña</string>
    <string name="text_email">Email</string>
    <string name="text_locality">Localidad</string>
    <string name="text_province">Provincia</string>
    <string name="text_genero">Genero</string>
    <string name="text_men">H</string>
    <string name="text_woman">M</string>
    <string name="text_question">Otro</string>
    <string name="text_polity">Deseo suscribirme a todas las novedades</string>
    <string name="text_read">He leido y acepto todos los terminos</string>
    <string name="text_register">Registrarse</string>
    <string name="text_name_user">Usuario</string>
    <string name="pref_remenber">Recordar datos de usuario en el login</string>
    <string name="text_summary_email">Email de la cuenta de usuario</string>
    <string name="text_summary_pwd">Contraseña de acceso a la aplicacion</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="isCompany">Tipo de usuario</string>
    <string name="client">Cliente</string>
    <string name="company">Empresa</string>
    <string name="businessName">Empresa</string>
    <string name="chbEmailNotification">Recibir actualizaciones en mi correo</string>
    <string name="acceptTerms">Acepto los terminos y condiciones de uso</string>
    <string name="ok">Registrarse</string>
    <string name="text_sign_up">¿Aún no tienes una cuenta?</string>
    <string name="text_provinces">Provincias</string>
</resources>
