<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_product"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_product"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_orderbyname_product"
        android:title="@string/action_sortbyname_product"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/preferencesGenerals"
        android:title="@string/action_generals_settings"
        android:orderInCategory="2"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/userPreferences"
        android:title="@string/action_users_settings"
        android:orderInCategory="3"
        app:showAsAction="never"
        />


</menu>