<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sin_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.SingUpActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUsername">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/edtUsername" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUserPassword"
        android:layout_below="@id/tilUsername">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/edtUserPassword"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail"
        android:layout_below="@id/tilUserPassword">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/edtEmail" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvProvince"
        android:text="@string/text_provinces"
        android:layout_below="@+id/tilEmail"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnProvincia"
        android:layout_below="@id/tilEmail"
        android:layout_marginTop="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txvLocality"
        android:text="@string/text_locality"
        android:layout_below="@+id/tilEmail"
        android:layout_alignParentRight="true"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnLocalidad"
        android:layout_below="@id/tilEmail"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isCompany"
        android:textSize="16sp"
        android:layout_marginRight="20dp"/>


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgCompany"
        android:layout_below="@id/spnLocalidad"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <RadioButton
            android:checked="true"
            android:text="@string/client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtClient"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbtCompany"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilCompany"
        android:layout_below="@id/rgCompany"
        android:visibility="gone"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtCompany"
            android:hint="@string/businessName" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chb_newsletters"
        android:text="@string/chbEmailNotification"
        android:layout_below="@id/tilCompany"
        android:layout_marginTop="15dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chb_agree"
        android:text="@string/acceptTerms"
        android:layout_below="@id/chb_newsletters"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignupOk"
        android:text="@string/ok"
        android:backgroundTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/chb_agree"
        android:onClick="signup"/>

</RelativeLayout>
