<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.RegisterActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/tilNameUser"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edtNameUser"
            android:hint="@string/text_name"
            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/tilPwd"
        android:layout_below="@+id/tilNameUser"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edtPasswor"
            android:hint="@string/text_paswd"
            android:inputType="textPassword"
            />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/tilEmail"
        android:layout_below="@+id/tilPwd"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edtEmail"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            />


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_province"
        android:layout_below="@+id/tilEmail"
        android:id="@+id/txvLocality"
        />


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_below="@+id/txvLocality"
        android:orientation="horizontal"
        android:weightSum="2"
        >



        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinerProvincia"
            android:layout_weight="1"

            />



        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinerLocalidad"
            android:layout_weight="1"
            />

    </LinearLayout>

    <TextView
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_locality"
        android:id="@+id/txvProvince"
        android:layout_below="@+id/tilEmail"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txvGenero"
        android:text="@string/text_genero"
        android:layout_below="@+id/linear"
        android:gravity="center"
        />

    <RadioGroup
        android:layout_below="@+id/txvGenero"
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbMen"
            android:text="@string/text_men"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWoman"
            android:text="@string/text_woman"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbIndefinid"
            android:text="@string/text_question"
            />

    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg"
        android:text="@string/text_polity"
        android:id="@+id/checSus"
        android:checked="true"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checSus"
        android:text="@string/text_read"
        android:id="@+id/checkRead"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/text_register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />






</RelativeLayout>
